--- a/public/index.html
+++ b/public/index.html
@@ -68,9 +68,7 @@
             <div class="col-md-3">
                 <p class="lead">Shop Name</p>
                 <div class="list-group">
-                    <a href="#" class="list-group-item">Category 1</a>
-                    <a href="#" class="list-group-item">Category 2</a>
-                    <a href="#" class="list-group-item">Category 3</a>
+                    <a href="#" ng-repeat="category in categories" class="list-group-item">{{category.name}}</a>
                 </div>
             </div>
 
