--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Aayush">
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="lib/angular-file-upload/dist/angular-file-upload.min.js"></script>
     <script src="app.js"></script>
     <title>FilterLADY</title>
 
@@ -17,6 +18,8 @@
 
     <!-- Custom CSS -->
     <link href="css/shop-homepage.css" rel="stylesheet">
+    <link href="css/get-shit-done.css" rel="stylesheet">
+    <link href="admin/assets/css/light-bootstrap-dashboard.css" rel="stylesheet"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,16 +31,16 @@
 </head>
 
 <body ng-app="filterlady" >
-
+    <div ng-include="'views/_navbar.html'"></div>
     <!-- Navigation -->
     <div ng-view></div>
     <!-- /.container -->
-
     <!-- jQuery -->
     <script src="lib/jquery/dist/jquery.js"></script>
 
     
     <!-- Bootstrap Core JavaScript -->
+    <script type="text/javascript" src="js/ct-paper.js"></script>
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
